# christ-in-song

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
installer/windows/: christ_in_song.iss
scripts/: build_windows.py  import_hymns.py  proccess.py  quick_build.bat
src/christ_in_song/: __init__.py  config.py  main.py
src/christ_in_song/database/: __init__.py  connection.py  models.py  schema.py
src/christ_in_song/ui/: __init__.py  main_window.py
src/christ_in_song/ui/old-ui/: main_window.py
src/christ_in_song/utils/: __init__.py
tests/: test_database.py
